kube-prometheus-stack/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus-stack
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: letsencrypt
spec:
  # tls:
  #   - hosts:  
  #       - your-domain.com
      # secretName: certname
  rules: 
    - host: grafana.datvo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
